[package]
name = "dwat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gimli = { version = "0.27.0", default-features = false, features = ["read"] }
memmap2 = { version = "0.5.5" }
fallible-iterator = { version = "0.2", default-features = false, optional = true }
object = { version = "0.30.0", default-features = false, features = ["read"], optional = true }
smallvec = { version = "1", default-features = false, optional = true }
thiserror = "1.0.50"
anyhow = "1.0.75"

[features]
default = ["std-object", "fallible-iterator", "smallvec"]
std = ["gimli/std"]
std-object = ["std", "object", "object/std", "object/compression", "gimli/endian-reader"]

[profile.release]
codegen-units = 1
lto = "fat"
