[package]
name = "dwat"
version = "0.6.4"
edition = "2021"
license = "BSD-2-Clause"
description = "A library for accessing DWARF v4/v5 type information"
homepage = "https://github.com/zolutal/dwat"
repository = "https://github.com/zolutal/dwat"
readme = "README.md"
keywords = [ "elf", "debug", "dwarf"]
categories = ["Debugging"]

[lib]
name = "dwat"
crate-type = ["rlib", "cdylib"]

[dependencies]
gimli = { version = "0.27.0", default-features = false, features = ["read"] }
memmap2 = { version = "0.5.5" }
fallible-iterator = { version = "0.2", default-features = false, optional = true }
object = { version = "0.30.0", default-features = false, features = ["read"], optional = true }
smallvec = { version = "1", default-features = false, optional = true }
clap = { version = "4.2", features = ["derive"] }
thiserror = "1.0.50"
anyhow = "1.0.75"
tempfile = "3.8.1"
libc = { version = "0.2.152", optional = true }
pyo3 = { version = "0.20.2", features = ["extension-module"], optional = true }

[features]
default = ["std-object", "fallible-iterator", "smallvec"]
std = ["gimli/std"]
std-object = ["std", "object", "object/std", "object/compression", "gimli/endian-reader"]
python = ["pyo3", "libc"]

[profile.release]
codegen-units = 1
lto = "fat"
